# week-2-assignment-datatypes-Jorabekisoqov

./: README.md
src/cpp/: CMakeLists.txt  main.cpp  task_2.h  task_4.h  task_5.h
src/py/: main.py  task_1.py  task_3.py
